fix text align on dropdown

--- a/pegasus/sites.v3/hourofcode.com/styles/060-hoc-specific.css
+++ b/pegasus/sites.v3/hourofcode.com/styles/060-hoc-specific.css
@@ -22,6 +22,7 @@
 #language-dropdown .selectize-input,
 #language-dropdown .selectize-dropdown {
   font-size: 12px;
+  text-align: initial;
 }
 #language-dropdown .selectize-input {
   padding: 2px 8px;
